# scala-chromatica

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
build_scripts/: coolors_parser.py  sample_palette.xml  spring_meadow.xml
examples/: basic_usage.rs  colormap_showcase.rs  colormap_showcase_egui.rs  colormap_showcase_shell.rs  copper_sheen_preview.rs  custom_gradients.rs  hsv_gradients.rs  test_v0_1_3.rs
src/: color.rs  colormap.rs  error.rs  io.rs  lib.rs
src/colormaps/: academic.json  copper_sheen.json  copper_sheen_v1.json  copper_sheen_v2.json  copper_sheen_v3.json  coral_sunset.json  cosmic_dawn.json  default.json  egyptian_echo.json  electric_neon.json  fire.json  frozen_amaranth.json  grayscale.json  ocean.json  olive_symmetry.json  orchid_garden.json  rainbow.json  spring_meadow.json  twilight_garden.json  vintage_lavender.json
