[package]
name = "scala-chromatica"
version = "0.1.3"
edition = "2021"
authors = ["ConociendoAlmasMenosHastiadas"]
license = "MIT OR Apache-2.0"
description = "A framework-agnostic color gradient library with smooth interpolation"
repository = "https://github.com/ConociendoAlmasMenosHastiadas/scala-chromatica"
documentation = "https://docs.rs/scala-chromatica"
keywords = ["color", "gradient", "colormap", "interpolation", "visualization"]
categories = ["graphics", "visualization"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"

[dev-dependencies]
# GUI framework for the colormap showcase example
egui = "0.29"
eframe = "0.29"
